# llvm-project

clang/docs/: ClangFormatStyleOptions.rst
clang/include/clang/Format/: Format.h
clang/lib/Format/: Format.cpp  UnwrappedLineFormatter.cpp
clang/unittests/Format/: FormatTest.cpp
mlir/examples/standalone/: CMakeLists.txt
mlir/examples/standalone/include/: CMakeLists.txt
mlir/examples/standalone/include/Cat/: CMakeLists.txt  Cat.h  Cat.td
mlir/examples/standalone/include/Dog/: CMakeLists.txt  DogDialect.h  DogDialect.td  DogOps.h  DogOps.td
mlir/examples/standalone/include/Parser/: AST.h  Lexer.h  MLIRGen.h  Parser.h
mlir/examples/standalone/include/Standalone-c/: Dialects.h
mlir/examples/standalone/lib/: CMakeLists.txt
mlir/examples/standalone/lib/CAPI/: CMakeLists.txt  Dialects.cpp
mlir/examples/standalone/lib/Cat/: CMakeLists.txt  CatDialect.cpp
mlir/examples/standalone/lib/Dog/: CMakeLists.txt  DogDialect.cpp  DogOps.cpp
mlir/examples/standalone/lib/Parser/: AST.cpp  CMakeLists.txt  MLIRGen.cpp
mlir/examples/standalone/toy/: CMakeLists.txt  toyc.cpp
mlir/examples/standalone/toy/Dialect/: MLIRGen.cpp  ToyDialect.cpp
mlir/examples/standalone/toy/include/dialect/: CMakeLists.txt  ToyDialect.h  ToyDialectOps.td
mlir/examples/standalone/toy/include/parser/: AST.h  Parser.h
mlir/examples/standalone/toy/parser/: AST.cpp
